Added shabbat abstraction, repository for data storage

--- a/RuachSignups/Views/Signups/Index.cshtml
+++ b/RuachSignups/Views/Signups/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<RuachSignups.Models.Shabbat>
+﻿@model IEnumerable<RuachSignups.Models.ShabbatModel>
 
 @{
     ViewData["Title"] = "Signups";
