--- a/RuachSignups/wwwroot/css/site.css
+++ b/RuachSignups/wwwroot/css/site.css
@@ -3,6 +3,20 @@
     padding-bottom: 20px;
 }
 
+input.copyable {
+    border: none;
+    display: inline;
+    font-family: inherit;
+    font-size: inherit;
+    padding: none;
+    width: 270px;
+}
+
+a.copyLink {
+    font-size: smaller;
+    float: right;
+}
+
 /* Wrapping element */
 /* Set some basic padding to keep content from hitting the edges */
 .body-content {
