Improved copy functionality

--- a/RuachSignups/Views/Signups/Index.cshtml
+++ b/RuachSignups/Views/Signups/Index.cshtml
@@ -23,18 +23,17 @@
         </tr>
     </thead>
     <tbody>
-@{int i = 0;}
 @foreach (var item in Model) {
         <tr>
             <td>
                 @Html.DisplayFor(modelItem => item.Date)
             </td>
             <td>
-                <input id="@($"name-{i}")" class="copyable" value="@Html.DisplayFor(modelItem => item.Title)"></input>&nbsp;<a class="copyLink" data-clipboard-target="@($"#name-{i}")">copy</a><br/>
-                Torah: <input id="@($"torah-{i}")" class="copyable" value="@Html.DisplayFor(modelItem => item.Torah)"/>&nbsp;<a class="copyLink" data-clipboard-target="@($"#torah-{i}")">copy</a><br/>
-                Haftarah: <input id="@($"haftarah-{i}")" class="copyable" value="@Html.DisplayFor(modelItem => item.Haftarah)"></input>&nbsp;<a class="copyLink" data-clipboard-target="@($"#haftarah-{i}")">copy</a><br/>
+                <span class="copyable">@Html.DisplayFor(modelItem => item.Title)</span><br/>
+                Torah: <span class="copyable">@Html.DisplayFor(modelItem => item.Torah)</span><br/>
+                Haftarah: <span class="copyable">@Html.DisplayFor(modelItem => item.Haftarah)</span><br/>
                 @if (item.Maftir != null) {
-                    <span>Maftir: <input id="@($"maftir-{i}")" class="copyable" value="@Html.DisplayFor(modelItem => item.Maftir)"></input>&nbsp;<a class="copyLink" data-clipboard-target="@($"#maftir-{i}")">copy</a></span><br/>
+                    <span>Maftir: </span><span class="copyable">@Html.DisplayFor(modelItem => item.Maftir)</span><br/>
                 }
             </td>
             <td>
@@ -43,7 +42,6 @@
                 @Html.ActionLink("Delete", "Delete", new { /* id=item.PrimaryKey */ })
             </td>
         </tr>
-    i++;
 }
     </tbody>
 </table>
